# u-short

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 5536fd4e102b_add_history_login_and_link_models.py  731733af26e9_password_field_in_user.py  76749306e680_add_history_login_and_link_models.py  f72c961463eb_init_db_and_app_tables.py
app/: main.py
app/core/: config.py  database.py
app/internal/models/: users.py
app/modules/accounts/infrastructure/: __init__.py  history_login.py  users.py
app/modules/accounts/presentation/: login.py
app/modules/links/application/: link_service.py
app/modules/links/infrastructure/: links.py
app/modules/links/presentation/: links.py
