[project]
name = "u-short"
version = "0.1.0"
description = "Most required and used URL shot app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.3",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.34",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
